Small alignment fix

--- a/src/components/stylesheets/Component.scss
+++ b/src/components/stylesheets/Component.scss
@@ -116,7 +116,7 @@
     text-align: center;
     font-size: large;
     display: block;
-    width: 49vw;
+    width: 50%;
     height: 60vh;
     padding: 0 auto; }
 
